cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_294.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/tls13_enc.c:262: error: DEAD_STORE
  The value written to &p (type ossl_param_st*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/tls13_enc.c:262:6: Write of unused value
260.                                                (unsigned char *)prevsecret,
261.                                                prevsecretlen);
262.       *p++ = OSSL_PARAM_construct_end();
            ^
263.   
264.       ret = EVP_KDF_CTX_set_params(kctx, params) <= 0
